changed script src

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
     </div>
 
     <div class="scripts">
-      <script src="./public/src/appState.js"></script>
-      <script src="./public/src/SocketSend.js"></script>
-      <script src="./public/src/SocketReceive.js"></script>
-      <script src="./public/src/question.js"></script>
-      <script src="./public/index.js"></script>
+      <script src="src/appState.js"></script>
+      <script src="src/SocketSend.js"></script>
+      <script src="src/SocketReceive.js"></script>
+      <script src="src/question.js"></script>
+      <script src="index.js"></script>
     </div>
   </body>
 </html>
